translated 3rd chapter to kg

--- a/assets/languages/ky-KG.json
+++ b/assets/languages/ky-KG.json
@@ -547,6 +547,61 @@
   "c2_25text2": "Кээде дарыгер дарылоо схемасын туура тандоо менен да терс таасирлерди азайта алат. Мисалы, бейтап аз кандуулук менен ооруса, ага муну күчөтчү (мисалы, зидовудин) \"\n                  \"дары-дармектер жазылбайт. Дагы бир мисал, эгерде бейтапта гепатит бар болсо, боорду жабыркатуучу невирапинди дайындабаш керек.\n\n",
   "c2_25text1": "Антиретровирустук дарылардын терс таасирин алдын алууга болобу?\n",
   "c2_25text3": "Айрым бир учурларда башка оорулардын көрүнүштөрү дарынын терс таасири катары кабыл алынышы мүмкүн. Мисалы, адам көп кусса, диарея болсо, бул АРТ дарыларынан улам эмес, курч ичеги инфекциясы менен байланыштуу болушу мүмкүн.",
-  "c2_25text4": "Ошондуктан, бейтап ар дайым дарыгерге АРТ баштагандан кийин пайда болгон жаңы симптомдор жөнүндө айтып турууга тийиш."
+  "c2_25text4": "Ошондуктан, бейтап ар дайым дарыгерге АРТ баштагандан кийин пайда болгон жаңы симптомдор жөнүндө айтып турууга тийиш.",
+
+
+  "c3_text1": "2019-жылы 15 жашка чейинки 28 бала ВИЧ менен катталган",
+  "c3_1text1":"ВИЧ менен жашаган үй-бүлөлөрдө кош бойлуулукту пландаштыруу",
+  "c3_1text2":"Балдарыңызга ВИЧ жуктуруп алуудан кантип сактанууга болот?",
+  "c3_1text3":"1. ВИЧ-инфекциясын алдын алуу",
+  "c3_1text4":"2. Ата-эненин экөөн тең ВИЧке тестирлөө",
+  "c3_1text5":"3. Каалабаган кош бойлуулуктун алдын алуу",
+  "c3_1text6":"4. ВИЧ+ энеден балага ВИЧтин жугушун алдын алуу",
+  "c3_1text7":"5. ВИЧке чалдыккан аялдарды, алардын балдарын жана үй-бүлөлөрүн дарылоо, кам көрүү жана колдоо көрсөтүү",
+  "c3_1text8":"ВИЧ-позитивдүү энеден балага вирус жугушу мүмкүн, бирок эне да, ата да баланы пландоо, кош бойлуулук, төрөт жана эмчек эмизүү учурунда ВИЧтин балага жугушун алдын алуу үчүн чараларды көрүүгө тийиш.\n",
+  "c3_1text9":"\nЭркек ВИЧ инфекциясын жуктурган дискорданттык жубайларда ВИЧтин жугушун алдын алуу",
+  "c3_1text10":"\nДискорданттык түгөйлөр – бул жубайлардын бири ВИЧ инфекциясын жуктуруп алган үй-бүлө. Эгерде жубайлардын бири ВИЧ инфекциясын жуктуруп алса, ВИЧтин жыныстык өнөктөшүнө жугушун алдын алуу маанилүү. Бул үчүн жыныстык катнаш болгон сайын презерватив колдонуш керек.",
+
+  "c3_2text1": "Эгерде эркек ВИЧти жуктуруп алса жана жубайлар кош бойлуулукту пландаштырып жатса, эркек АРТ дарыларын өз убагында жана туура ичип, вирустук жүктү аныкталбаган деңгээлге түшүрүшү керек (1 тамчы канда 1000ден кем вирус).Аял менен бала ВИЧ-инфекциясын жугузуп алуу коркунучуна дуушар болбошу үчүн баланы вирустук жүк аныкталбаган деңгээлге жеткенде гана пландоо зарыл.",
+  "c3_2text2": "\n\nКош бойлуулукту пландаштыруу",
+  "c3_2text3": "\nКачан жана канча балалуу болоорун ар бир түгөй өзү чечет. Бирок кош бойлуулукту ата-эненин ден соолугунун абалын, ошондой эле төрөт ортосундагы аралыкты эске алуу менен пландаштыруу зарыл (балдардын ортосундагы аралык бери дегенде 3 жыл болушу керек). Мунун баары ВИЧти балага жуктуруп албоо үчүн гана эмес, ошондой эле эненин жана баланын ден соолугунун абалы үчүн да маанилүү. Кош бойлуулукту пландаштырууда төмөнкүлөр маанилүү:",
+  "c3_2text4": "- ВИЧке чалдыккан ата-эне АРТны туура кабыл алышы керек жана вирустук жүк аныкталбаган деңгээлде болууга тийиш;",
+  "c3_2text5": "- ата-энесинин экөөндө тең оорулар (жыныстык жол менен жугуучу оорулар, жыныс органдарынын сезгенүү оорулары, кургак учук, вирустук гепатит, онкологиялык оорулар ж.б.) болбошу керек же бул ооруларды кош бойлуулукка чейин айыктырууга тийиш;",
+
+  "c3_3text1":"- ата-эне алкоголдук ичимдиктерди жана/же баңгизаттарды колдонбошу керек же тиешелүү дарылоодон өтүүгө тийиш (инъекциялык баңги колдонуучулар үчүн метадон менен терапияны колдогон программага катышуу сунушталат); - ата-эне тамекини ташташы керек (же тамекинин санын бир топ кыскартууга тийиш).",
+  "c3_3text2":"\nКош бойлуулукту пландаштыруу маселелери боюнча дарыгер менен кеңешүү зарыл.",
+
+  "c3_4text1":"ВИЧтин энеден балага жугушун алдын алуу",
+  "c3_4text2":"Кош бойлуулук\n\n",
+  "c3_4text3":"Ден соолугу чың ВИЧке чалдыккан аялдын кош бойлуулугу ВИЧке чалдыкпаган аялдыкындай эле өтөт.\n",
+  "c3_4text4":"\nКош бойлуулук табигый процесс, бирок ал аялдын организмин олуттуу түрдө өзгөртүү менен коштолот жана бардык органдарга (өпкөгө, жүрөккө, кан тамырларына, бөйрөккө, боорго ж.б.) жүктү көбөйтөт. Ошондуктан, кош бойлуулукка даярданып, аны пландаштырып, вирустук жүктүн деңгээлин аныктап, АРТ дарыларын туура ичиш керек. Мындай чаралар ВИЧ-позитивдүү эненин ден соолугун гана сактабастан, балага ВИЧтин жугушун алдын алуу үчүн да зарыл.",
+  "c3_4text5":"\n\nАял кош бойлуу кезинде АРТ дарыларын туура ичкени өзгөчө маанилүү. Эгерде аял кош бойлуу болгонго чейин кандайдыр бир себептерден улам АРТ дарыларын ичпей жүрсө, дарыланууну чукул арада башташы керек. Вирустук жүк аныкталбаган деңгээлге түшкөнү маанилүү.",
+
+  "c3_5text1":"Ошондой эле туура тамактануу, иштөө жана эс алуу режимин сактоо, жакындарынын колдоосу, ВИЧ-инфекциясы боюнча да, кош бойлуулук боюнча да дарыгердин үзгүлтүксүз көзөмөлүндө болуу маанилүү. ",
+  "c3_5text2":"\n\nКош бойлуулук\n\n",
+  "c3_5text3":"Төрөт тартиби жөнүндө чечим вирустук жүктүн абалына жана кош бойлуулуктун жүрүшүнө жараша болот. Аялдын абалы жакшы болсо, вирустук жүк аныкталбаган деңгээлге түшсө, анда төрөт табигый жол менен болот. Калган учурларда, дарыгер операцияны (кесарево) сунуштай алат. Операция жасалабы, же табигый төрөт болобу – бул аялдын ВИЧ-статусун гана эмес, кош бойлуулуктун жүрүшүн да эске алуу менен аялдын каалоосу боюнча аныкталат.",
+  "c3_5text4":"\n\nВИЧ-позитивдүү аялга төрөттөн кийинки мезгилде жардам берүү\n\n",
+  "c3_5text5":"Бала төрөлгөндөн кийин аялга кеңеш берилип, каалабаган кош бойлуулуктун алдын алуу үчүн контрацепциялар жазылат.",
+
+  "c3_6text1":"\nАялга төрөттөн кийинки жардам берип, ал жетиштүү эс алып, жакшы тамактануусу үчүн кам көрүү маанилүү,",
+  "c3_6text2":"ошондой эле төрөттөн кийин аял АРТны үзгүлтүккө учуратпашы үчүн шарт түзүп берүү зарыл.",
+  "c3_6text3":"Аныкталбаган вирустук жүк: ",
+  "c3_6text4":"ВИЧтин энеден балага жугушун алдын алат,",
+  "c3_6text5":"\n- табигый төрөттү (операция жасабастан) тандоого мүмкүнчүлүк берет",
+  "c3_6text6":"\n- балага эне сүтүн берүүгө шарт түзөт,",
+  "c3_6text7":"\n- бала төрөлгөндөн кийин АРТ дарыларын ичүү узактыгы азаят.",
+
+  "c3_7text1":"ВИЧ инфекциясы бар энеден төрөлгөн балага байкоо жүргүзүү",
+  "c3_7text2":"Эгерде аялда вирустук жүк аныкталбаган деңгээлде болсо, баланы 6 айга чейин эмизүүгө уруксат берилет, мында жасалма кошулмаларды жана суу аралаштырбастан баланы эне сүтү менен тоюндуруш керек.",
+  "c3_7text3":"\n\nЭгерде аялдын вирустук жүгү жогору болсо же АРТ дарыларын ичпесе, ымыркайга ВИЧ-илдети эне сүтү аркылуу жугушу мүмкүн. Мындай учурларда ымыркай төрөлгөндөн баштап жасалма тамактандырууга өтөт. Эмчек сүтүн алмаштырган аралашмаларды жашаган жериңиз боюнча бейтапканадан акысыз алсаңыз болот. ",
+  "c3_7text4":"\n\nБала төрөлөөр замат 6-12 жума бою АРТ дарылары дайындалат – бул ВИЧ инфекциясын алдын алуу үчүн маанилүү. АРТ дарыларынын дозасы жана узактыгы эненин вирустук жүгүнүн абалына жараша болот.",
+
+  "c3_8text1":"Жаңы төрөлгөн ымыркайларды ВИЧке текшерүү вирусту эрте мөөнөттө аныктоодо жана өз убагында дарылоону дайындоодо маанилүү ролду ойнойт. Балдарды ВИЧке текшерүү ымыркай төрөлгөндөн кийин 48 сааттын ичинде; 4-6 апталык мөөнөттө жана зарыл болгон учурда (ВИЧке анализ оң чыкканда) 3-4 айдын ичинде жүргүзүлөт. Бул текшерүүлөрдүн натыйжасында ВИЧке анализ оң чыкканда балдарга АРТ дайындалат. Соңку диагноз бала төрөлгөндөн кийин 18 айдын ичинде коюлат.",
+  "c3_8text2":"\n\nВИЧ-позитивдүү энелерден төрөлгөн бардык балдар, ВИЧ-статусуна карабастан, төрөлгөн күндөн тартып 18 айга чейин мамлекеттик социалдык жөлөкпулду алууга укуктуу.",
+  "c3_8text3":"\n\nЖаңы төрөлгөн ымыркайларда ВИЧ-инфекциясын өз убагында аныктоо эрте мөөнөттө дарылоону дайындоо, эмдөөлөрдү пландаштыруу жана баланы эмдөө, инфекциялардын алдын алуу үчүн башка дарыларды (котримоксазол) дайындоо үчүн маанилүү.",
+
+  "c3_9text1":"Ымыркайга өз убагында, туура дарылоо дайындалганда анын вирустук жүгү аныкталбаган деңгээлге түшүп, бала физикалык жана акыл-эс жактан жакшы өнүгүп, теңтуштарынан эч артта калбайт.",
+  "c3_9text2":"Балаңыздын ден соолукка жана жашоого укугу бар. Кош бойлуу кезде АРТ дарыларын ичүүнү чечкенде, балаңыз жөнүндө; төрөттөн кийин балаңызга АРВ дарыларын берүү жөнүндө; дарылануу режимин туура сактоо жөнүндө; балаңызды ВИЧке өз убагында текшертип туруу жөнүндө ойлонуңуз."
+
 
 }
