--- a/assets/languages/ru-RU.json
+++ b/assets/languages/ru-RU.json
@@ -546,7 +546,61 @@
   "c2_25text1": "Можно ли предотвратить побочные эффекты антиретровирусных препаратов?\n",
   "c2_25text2": "Иногда врач может снизить риск возникновения побочных эффектов, правильно подобрав схему лечения. Например, если у пациента есть анемия, ему не назначают препараты, которые могут её усугубить (например, зидовудин). Другой пример: если у пациента имеется гепатит, ему нежелательно назначать невирапин, который может вызвать ухудшение состояния печени.\n\n",
   "c2_25text3": "В некоторых случаях за побочные эффекты могут принять проявления других заболеваний. Например, рвота и диарея могут быть связаны не с приёмом АРТ, а с острой кишечной инфекцией. ",
-  "c2_25text4": "Поэтому пациенту всегда следует сообщать врачу о всех новых симптомах, которые появились после начала АРТ."
+  "c2_25text4": "Поэтому пациенту всегда следует сообщать врачу о всех новых симптомах, которые появились после начала АРТ.",
+
+
+  "c3_text1": "В 2019 году было зарегистрировано 28 детей до 15 лет с ВИЧ",
+  "c3_1text1":"Планирование беременности в семьях, живущих с ВИЧ ",
+  "c3_1text2":"Как предупредить заражение ВИЧ своих детей?",
+  "c3_1text3":"1. Предупреждение ВИЧ-инфекции ",
+  "c3_1text4":"2. Тестирование на ВИЧ обоих родителей",
+  "c3_1text5":"3. Профилактика нежелательной беременности",
+  "c3_1text6":"4. Профилактика передачи ВИЧ от ВИЧ+ матери ребенку",
+  "c3_1text7":"5. Предоставление лечения, помощи и поддержки ВИЧ-позитивным женщинам, их детям и семьям",
+  "c3_1text8":"ВИЧ может передаваться от ВИЧ-позитивной матери ребенку, но важно, чтобы и мать, и отец предпринимали меры для предупреждения передачи ВИЧ детям при планировании беременности, во время беременности, во время родов и при кормлении ребенка грудью.\n",
+  "c3_1text9":"\nПредупреждение передачи ВИЧ в дискордантных парах, где мужчина инфицирован ВИЧ",
+  "c3_1text10":"\nДискордантные пары – это семейные пары, где один из супругов инфицирован ВИЧ. Если один из супругов инфицирован ВИЧ, то важно предупредить передачу ВИЧ половому партнеру. Для этого используют презерватив при каждом половом контакте.",
+
+  "c3_2text1": "Если только мужчина инфицирован ВИЧ, а пара планирует беременность, особенно важно, чтобы мужчина правильно принимал АРТ и достиг неопределяемой вирусной нагрузки (менее 1000 вирусов в 1 капле крови). Зачатие ребенка можно планировать только при неопределяемой вирусной нагрузке, чтобы не подвергать женщину и ребенка риску инфицирования ВИЧ.",
+  "c3_2text2": "\n\nПланирование беременности",
+  "c3_2text3": "\nКаждая пара сама решает, когда и сколько детей им иметь. Однако, нужно планировать беременность, учитывая состояние здоровья родителей, а также интервал между родами не менее 3 лет. Все это может оказать воздействие не только на передачу ВИЧ ребенку, но и на состояние здоровья матери и ребенка. При планировании беременности важно убедиться, что:",
+  "c3_2text4": "- каждый ВИЧ-позитивный родитель правильно принимает АРТ и имеет неопределяемую вирусную нагрузку;",
+  "c3_2text5": "- оба родителя  имеют заболеваний (ИППП, другие воспалительные заболевания половых органов, туберкулез, вирусные гепатиты, онкологические заболевания и др.) или провели их лечение до наступления беременности;",
+
+  "c3_3text1":"- оба родителя не употребляют алкоголь и/или наркотики либо проходят соответствующее лечение (для инъекционных потребителей наркотиков, рекомендуется участие в программе поддерживающей терапии метадоном);- оба родителя отказались от курения (либо существенно снизили количество сигарет).",
+  "c3_3text2":"\nПо вопросам планирования беременности нужно советоваться с лечащим врачом.",
+
+  "c3_4text1":"Профилактика передачи ВИЧ от матери ребенку",
+  "c3_4text3":"Беременность у ВИЧ-позитивной женщины при хорошем состоянии здоровья протекает так же, как у женщины без ВИЧ.\n",
+  "c3_4text4":"\nБеременность – естественный процесс, но он сопровождается значительной перестройкой женского организма и повышает нагрузку на все органы (легкие, сердце, сосуды, почки, печень и др.). Поэтому к беременности нужно готовиться, ее нужно планировать, оценивать состояние вирусной нагрузки и правильно принимать АРТ. Это позволит не только сохранить здоровье ВИЧ-позитивной матери, но предотвратить передачу ВИЧ ребенку.",
+  "c3_4text5":"\n\nВо время беременности особенно важно правильно принимать АРТ, либо начать прием АРТ, если по каким-либо причинам женщина еще не получала АРТ до беременности. Важно иметь неопределяемую вирусную нагрузку. ",
+  "c3_4text2":"Ведение беременности\n\n",
+
+  "c3_5text1":"Также важны хорошее питание, соблюдение режима работы и отдыха, поддержка близких, регулярное наблюдение у врача как по ВИЧ-инфекции, так и по беременности. ",
+  "c3_5text2":"\n\nВедение родов\n\n",
+  "c3_5text3":"Решение о порядке родоразрешения зависит от состояния вирусной нагрузки и течения беременности. Если состояние женщины хорошее и вирусная нагрузка неопределяемая, то роды проходят естественным путем. В других случаях врач может предложить операцию (кесарево сечение). Выбор операции или естественных родов определяется по желанию женщины с учетом не только ВИЧ-статуса, но и течения беременности.",
+  "c3_5text4":"\n\nПомощь ВИЧ-позитивной женщине в послеродовый период\n\n",
+  "c3_5text5":"Женщине после рождения ребенка проводится консультирование и назначается контрацепция для предупреждения нежелательной беременности. ",
+
+  "c3_6text1":"\nВажно оказать помощь женщине после родов, чтобы она имела возможность для отдыха и хорошего питания,",
+  "c3_6text2":" а также создать условия, чтобы женщина не прерывала прием АРТ после родов.",
+  "c3_6text3":"Неопределяемая Вирусная Нагрузка дает возможность:",
+  "c3_6text4":"- предотвратить передачу ВИЧ от матери ребенку,",
+  "c3_6text5":"\n- выбора естественных родов (без операции),",
+  "c3_6text6":"\n- естественного грудного вскармливания ребенка,",
+  "c3_6text7":"\n- уменьшения продолжительности приема АРВ-препаратов ребенком после рождения.",
+
+  "c3_7text1":"Наблюдение за ребенком, рожденным у ВИЧ-позитивной матери",
+  "c3_7text2":"Если у женщины неопределяемая вирусная нагрузка, разрешается естественное вскармливание ребенка – кормление грудью, которое проводится до 6 месяцев, при условии только грудного вскармливания, по требованию ребенка, без добавления искусственных смесей и воды. ",
+  "c3_7text3":"\n\nЕсли же у женщины высокая вирусная нагрузка или она не принимает АРТ, грудное вскармливание может привести к инфицированию ВИЧ новорожденного ребенка. В таких случаях назначают искусственное вскармливание с рождения. Предусмотрено бесплатное предоставление заменителей грудного молока для таких детей, которое Вы сможете получить в поликлинике по месту жительства. ",
+  "c3_7text4":"\n\nСразу после рождения ребенку назначают АРТ в течение 6-12 недель – это важно для профилактики инфицирования ВИЧ. Доза и продолжительность АРТ зависят от приема АРТ и состояния вирусной нагрузки у матери.",
+
+  "c3_8text1":"Обследование новорожденных детей на ВИЧ играет важную роль для раннего выявления у них ВИЧ и своевременного назначения лечения. Обследование детей на ВИЧ проводится в срок до 48 часов после рождения; в срок 4-6 недель и, при необходимости (при положительном анализе на ВИЧ), в 3-4 месяца. Детям, у которых выявлен положительный результат на ВИЧ, при любом из этих исследований, назначается АРТ. Окончательный диагноз ставится в 18 месяцев после рождения.",
+  "c3_8text2":"\n\nВсе дети, рожденные у ВИЧ-позитивных матерей, независимо от ВИЧ-статуса имеют право на получение государственного социального пособия с момента рождения до 18 месяцев после рождения. ",
+  "c3_8text3":"\n\nСвоевременное выявление ВИЧ-инфекции у новорожденных детей важно для раннего начала лечения, планирования и проведения прививок, назначения других препаратов (котримоксазол) для профилактики инфекций. ",
+
+  "c3_9text1":"Ребенок, которому своевременно назначено, правильно проводится лечение и достигается неопределяемая вирусная нагрузка, хорошо развивается физически и умственно, и ни в чем не отстает от сверстников.",
+  "c3_9text2":"Ваш ребенок имеет право на здоровье и жизнь. Думайте о своем ребенке, когда Вы принимаете решение о приеме АРТ во время беременности; о приеме АРВ-препаратов ребенком после родов; о правильном соблюдении режима лечения; о своевременном обследовании ребенка на ВИЧ."
 
 }
 
